# FluxPanel

flux-backend/: pyproject.toml
flux-backend/api/: mj_site_api.py
flux-backend/config/: env.py
flux-backend/module_admin/controller/: mj_account_controller.py  mj_monitor_job_controller.py
flux-backend/module_admin/dao/: mj_account_dao.py  mj_monitor_job_dao.py
flux-backend/module_admin/entity/do/: mj_account_do.py  mj_monitor_job_do.py
flux-backend/module_admin/entity/vo/: mj_account_vo.py  mj_monitor_job_vo.py
flux-backend/module_admin/service/: mj_account_service.py  mj_monitor_job_service.py
flux-backend/module_gen/service/: gen_table_service.py
flux-backend/router/: router_manager.py
flux-backend/sql/: table.sql
flux-backend/tests/: test_mj_site_api.py
flux-backend/utils/: mj_site_api.py  request_util.py
flux-frontend/src/api/mj/: account.js  monitor.js
flux-frontend/src/views/mj/account/: index.vue
flux-frontend/src/views/mj/monitor/: index.vue
